fix: hide `keys` container on mobile

--- a/packages/docsearch-css/src/button.css
+++ b/packages/docsearch-css/src/button.css
@@ -63,11 +63,8 @@
 }
 
 @media (max-width: 750px) {
-  .DocSearch-Button-KeySeparator,
-  .DocSearch-Button-Key {
-    display: none;
-  }
-
+  .DocSearch-Button-Keys,
+  .DocSearch-Button-Key,
   .DocSearch-Button-Placeholder {
     display: none;
   }
